--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>BEER ME</h1>
-    <p>created by master coders: Enrique, Nick, Nigel, Phil</p>
+    <p>created by master coders: Enrique, Nick, Nigel, Phil, joe</p>
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
