--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <body>
     <h1>BEER ME</h1>
     <p>created by master coders: Enrique, Nick, Nigel, Phil</p>
-    
+    <h1 class="hero">BEER ME</h1>
+   
+   
+   <script src="assets/js/logic.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   </body>
