random drink function made

--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
     <link rel="stylesheet" href="assets/css/mixerStyles.css">
   </head>
   <body>
-<<<<<<< HEAD
-    <h1>BEER ME</h1>
-    <p>created by master coders: Enrique, Nick, Nigel, Phil</p>
-    <h1 class="hero">BEER ME</h1>
-   
-   
-   <script src="assets/js/logic.js"></script>
-=======
     <div id="slideshow" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -43,16 +35,16 @@
       <div clas="row">
         <div class="col-sm-03 random-four">
           <div>
-            <a href="https://placeholder.com" class="random-drink1"><img src="http://via.placeholder.com/250x250"></a>
+            <a href="https://placeholder.com" class="random-drink1"></a>
           </div>
           <div>
-            <a href="https://placeholder.com" class="random-drink2"><img src="http://via.placeholder.com/250x250"></a>
+            <a href="https://placeholder.com" class="random-drink2"></a>
           </div>
           <div>
-            <a href="https://placeholder.com" class="random-drink3"><img src="http://via.placeholder.com/250x250"></a>
+            <a href="https://placeholder.com" class="random-drink3"></a>
           </div>
           <div>
-            <a href="https://placeholder.com" class="random-drink4"><img src="http://via.placeholder.com/250x250"></a>
+            <a href="https://placeholder.com" class="random-drink4"></a>
           </div>
         </div>
       
@@ -85,7 +77,6 @@
             </form>
           </card>
         </div>
->>>>>>> 725360d532d0e3a27bde288e15c4f5e746ea9caf
 
       </div>
     </div>
