Added Results and Drink Page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="//codeply.com">Creators</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Bars</a>
+            <a class="nav-link" href="#">New Search</a>
           </li>
         </ul>
       </div>
@@ -50,42 +50,22 @@
         <img class="d-block w-100" src="assets/images/cocktail-3.jpg">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/cocktail-4.jpg">
+        <img class="d-block w-100" src="assets/images/cocktail-4.png">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/cocktail-5.png">
+        <img class="d-block w-100" src="assets/images/cocktail-5.jpg">
       </div>
     </div>
   </div>
 
   <div class="statement">
     <p>Looking to make some cocktails tonight? You've come to the right place!</p>
-    <p>Search for your favorite drink or try something new.</p> 
+    <p>Search for your favorite drink or try something new.</p>
     <p>Whether it's a cool Margarita or a nice stiff one with Gin, we've got the right recipe for you.</p>
   </div>
 
   <div class="container-body">
     <div class="random-four">
-      <div>
-        <a href="https://placeholder.com" class="random-drink1">
-          <img src="http://via.placeholder.com/250x250">
-        </a>
-      </div>
-      <div>
-        <a href="https://placeholder.com" class="random-drink2">
-          <img src="http://via.placeholder.com/250x250">
-        </a>
-      </div>
-      <div>
-        <a href="https://placeholder.com" class="random-drink3">
-          <img src="http://via.placeholder.com/250x250">
-        </a>
-      </div>
-      <div>
-        <a href="https://placeholder.com" class="random-drink4">
-          <img src="http://via.placeholder.com/250x250">
-        </a>
-      </div>
     </div>
 
     <h2>Let's make a drink!</h2>
@@ -123,17 +103,48 @@
       </card>
     </div>
   </div>
-  </div>
+  </div> 
 
   <div class="container-results">
-    <div class="drink">
-      <div class="drinkName">Drink Name</div>
-      <div class="drinkPic">Drink Picture</div>
-      <div class="instructions">Drink Instructions</div>
-      <div class="glass">Drink Glass</div>
-      <div class="ingredients">Drink Ingredients</div>
-    </div>
+      <div>
+          <a href="https://placeholder.com" class="result-drink">
+            <img class="img-fluid" src="http://via.placeholder.com/250x250">
+          </a>
+        </div>
+  </div> 
+
+
+  <div class="drink-page">
+    <img class="img-fluid" src="http://via.placeholder.com/250x250">
+
+    <div class="info">
+    <h3 class="drink-name">Sex on the Beach</h3>
+    <p class="drink-alcoholic">Alcoholic</p>
+    <p class="drink-glass">Old-fashioned Glass</p>
   </div>
+
+ <div class="results-table">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Ingredient</th>
+                <th scope="col">Measure</th>
+            </tr>
+        </thead>
+        <tbody class="list">
+            <tr>
+                <td class="ingredient">Tequila</td>
+                <td class="measure">4.5cl</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
+</div>
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
