Added div results container

--- a/index.html
+++ b/index.html
@@ -103,46 +103,53 @@
       </card>
     </div>
   </div>
-  </div> 
+  </div>
 
   <div class="container-results">
-      <div>
-          <a href="https://placeholder.com" class="result-drink">
-            <img class="img-fluid" src="http://via.placeholder.com/250x250">
-          </a>
-        </div>
-  </div> 
+    <div>
+      <a href="https://placeholder.com" class="result-drink">
+        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+      </a>
+    </div>
+  </div>
 
 
   <div class="drink-page">
     <img class="img-fluid" src="http://via.placeholder.com/250x250">
 
     <div class="info">
-    <h3 class="drink-name">Sex on the Beach</h3>
-    <p class="drink-alcoholic">Alcoholic</p>
-    <p class="drink-glass">Old-fashioned Glass</p>
+      <h3 class="drink-name">Sex on the Beach</h3>
+      <p class="drink-alcoholic">Alcoholic</p>
+      <p class="drink-glass">Old-fashioned Glass</p>
+    </div>
+
+
+    <div class="results-container">
+      <div class="results-table">
+        <table class="table table-hover table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Ingredient</th>
+              <th scope="col">Measure</th>
+            </tr>
+          </thead>
+          <tbody class="list">
+            <tr>
+              <td class="ingredient border-right">Tequila</td>
+              <td class="measure">4.5cl</td>
+            </tr>
+            <tr>
+              <td class="ingredient border-right">Salt</td>
+              <td class="measure">4.5cl</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+
+
   </div>
-
- <div class="results-table">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Ingredient</th>
-                <th scope="col">Measure</th>
-            </tr>
-        </thead>
-        <tbody class="list">
-            <tr>
-                <td class="ingredient">Tequila</td>
-                <td class="measure">4.5cl</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
-
-
-</div>
 
 
 
