--- a/index.html
+++ b/index.html
@@ -103,48 +103,48 @@
   </div> <!--On first click HIDE landing-page div -->
  
   <div class="container-results"> <!--On first click SHOW container-results div -->
-      <a href="https://placeholder.com" class="result-drink">
+     <!-- <a href="https://placeholder.com" class="result-drink">
         <img class="img-fluid" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
-      </a>
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
+      </a> -->
   </div>
 
 
   <div class="final-drink"> <!--HIDE until container-results clicked--> <!--SHOW final-drink container-->
 
-    <img class="img-fluid drinkThumb" src="http://via.placeholder.com/250x250">
+    <img class="img-fluid drinkThumb2" src="http://via.placeholder.com/250x250">
 
     <div class="info">
       <h3 class="drink-name">Sex on the Beach</h3>
@@ -164,7 +164,7 @@
           </tr>
         </thead>
         <tbody class="list">
-          
+
         </tbody>
       </table>
     </div>
