--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   </div> <!--On first click HIDE landing-page div -->
  
   <div class="container-results"> <!--On first click SHOW container-results div -->
-     <!-- <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid" src="http://via.placeholder.com/250x250">
+    <!-- <a href="https://placeholder.com" class="result-drink">
+        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
       <a href="https://placeholder.com" class="result-drink">
         <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
