tweaking results page

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </tr>
         </thead>
         <tbody class="list">
-          
+          <!-- //POPULATE INGREDIENTS AND AMOUNTS HERE -->
         </tbody>
       </table>
     </div>
