--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     </div>
   </nav>
 
+
+  <div class="login-div">
+    <input class="login-input" type="email" placeholder="Email" />
+    <input class="login-input" type="password" placeholder="Password" />
+
+    <button class="login-btn">Login</button>
+  </div>
+
   <div class="landing-page">
 
     <div id="slideshow" class="carousel slide" data-ride="carousel">
@@ -100,9 +108,11 @@
       </div>
     </div>
 
-  </div> <!--On first click HIDE landing-page div -->
- 
-  <div class="container-results"> <!--On first click SHOW container-results div -->
+  </div>
+  <!--On first click HIDE landing-page div -->
+
+  <div class="container-results">
+    <!--On first click SHOW container-results div -->
     <!-- <a href="https://placeholder.com" class="result-drink">
         <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a>
@@ -142,7 +152,9 @@
   </div>
 
 
-  <div class="final-drink"> <!--HIDE until container-results clicked--> <!--SHOW final-drink container-->
+  <div class="final-drink">
+    <!--HIDE until container-results clicked-->
+    <!--SHOW final-drink container-->
 
     <img class="img-fluid drinkThumb2" src="http://via.placeholder.com/250x250">
 
@@ -175,8 +187,8 @@
 
     </div>
 
-    <input class="btn btn-outline-warning" id="newSearch" type="submit" value="New Search"> 
-    <!--on click HIDE final-drink container--> 
+    <input class="btn btn-outline-warning" id="newSearch" type="submit" value="New Search">
+    <!--on click HIDE final-drink container-->
     <!--on click SHOW landing page-->
 
 
