Worked on HTML, CSS and .hide()

--- a/index.html
+++ b/index.html
@@ -151,50 +151,50 @@
       </a> -->
   </div>
 
+  <div class="container-drinks">
+    <div class="final-drink">
+      <!--HIDE until container-results clicked-->
+      <!--SHOW final-drink container-->
 
-  <div class="final-drink">
-    <!--HIDE until container-results clicked-->
-    <!--SHOW final-drink container-->
+      <img class="img-fluid drinkThumb2" src="">
 
-    <img class="img-fluid drinkThumb2" src="http://via.placeholder.com/250x250">
+      <div class="info">
+        <h3 class="drink-name">Sex on the Beach</h3>
+        <p class="drink-alcoholic">Alcoholic</p>
+        <p class="drink-glass">Old-fashioned Glass</p>
+      </div>
 
-    <div class="info">
-      <h3 class="drink-name">Sex on the Beach</h3>
-      <p class="drink-alcoholic">Alcoholic</p>
-      <p class="drink-glass">Old-fashioned Glass</p>
+
+      <div class="container-table">
+
+        <div class="results-table">
+          <table class="table table-hover table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Ingredient</th>
+                <th scope="col">Measure</th>
+              </tr>
+            </thead>
+            <tbody class="list">
+
+            </tbody>
+          </table>
+        </div>
+
+        <div class="instructions">
+
+          <p>Shake and strain into a chilled glass.</p>
+
+        </div>
+
+        <input class="btn btn-outline-warning" id="newSearch" type="submit" value="New Search">
+        <!--on click HIDE final-drink container-->
+        <!--on click SHOW landing page-->
+      </div>
+
     </div>
-
-
-
-
-    <div class="results-table">
-      <table class="table table-hover table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Ingredient</th>
-            <th scope="col">Measure</th>
-          </tr>
-        </thead>
-        <tbody class="list">
-
-        </tbody>
-      </table>
-    </div>
-
-    <div class="instructions">
-
-      <p>Shake and strain into a chilled glass.</p>
-
-    </div>
-
-    <input class="btn btn-outline-warning" id="newSearch" type="submit" value="New Search">
-    <!--on click HIDE final-drink container-->
-    <!--on click SHOW landing page-->
-
 
   </div>
-
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
