--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="navbar-collapse collapse" id="navbar9">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">New Search</a>
+            <a class="nav-link" href="#"id="newSearch">New Search</a>
           </li>
         </ul>
       </div>
@@ -83,14 +83,9 @@
               <input class="btn btn-outline-warning" id="searchName" type="submit" value="Search">
             </div>
             <div class="form-group">
-              <label for="inputAlcohol">Alcohol</label>
+              <label for="inputAlcohol">Alcohol / Ingredient</label>
               <input style="width:500px;font-size:14pt;" type="text" class="form-control" id="inputAlcohol">
               <input class="btn btn-outline-warning" id="searchAlcohol" type="submit" value="Search">
-            </div>
-            <div class="form-group">
-              <label for="inputIngredient">Main Ingredient</label>
-              <input style="width:500px;font-size:14pt;" type="text" class="form-control" id="inputIngredient">
-              <input class="btn btn-outline-warning" id="searchIngredient" type="submit" value="Search">
             </div>
             <div class="form-group">
               <label for="inputGlass">Glass</label>
@@ -115,41 +110,7 @@
     <!--On first click SHOW container-results div -->
     <!-- <a href="https://placeholder.com" class="result-drink">
         <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
-      </a>
-      <a href="https://placeholder.com" class="result-drink">
-        <img class="img-fluid drinkThumb1" src="http://via.placeholder.com/250x250">
       </a> -->
-      
   </div>
 
   <div class="container-drinks">
