--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a href="/" class="navbar-brand" style="font-size: 50px">The Mixer</a>
+      <div class="navbar-brand" style="font-size: 50px">The Mixer</div>
       <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse" id="navbar9">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#"id="newSearch">New Search</a>
+            <a class="nav-link" href="#" id="newSearch">New Search</a>
           </li>
         </ul>
       </div>
