--- a/index.html
+++ b/index.html
@@ -19,24 +19,22 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <div class="navbar-brand" style="font-size: 50px">The Mixer</div>
-    </div>
     <!-- user logout -->
-    <div class="logout-div" id="logout-id">
+    <div class="logout-div ml-auto" id="logout-id">
       <input class="btn btn-outline-warning logout-btn my-2" type="submit" value="Logout">
     </div>
+  </div>
   </nav>
 
   <!-- user login -->
   <div class="login-div" id="login-id">
-    <h2>Mixer Account</h2>
+    <h2>Welcome Back!</h2>
     <input class="login-input" type="email" placeholder="Email..." id="user-email" />
     <input class="login-input" type="password" placeholder="Password..." id="user-pw" />
 
     <button type="button" class="btn btn-outline-warning login-btn">Login</button><br>
     <div class="alert alert-danger" role="alert">No account with that User and/or Password.</div>
   </div>
-
-  <p id="login-msg"></p>
 
   <div class="landing-page">
 
@@ -96,10 +94,12 @@
               </select>
               <input class="btn btn-outline-warning" id="searchGlass" type="submit" value="Search">
             </div>
+            <p id="login-msg"></p>
           </form>
         </card>
       </div>
     </div>
+
 
   </div>
   <!--On first click HIDE landing-page div -->
@@ -119,9 +119,9 @@
       <img class="img-fluid drinkThumb2" src="">
 
       <div class="info">
-        <h3 class="drink-name">Sex on the Beach</h3>
-        <p class="drink-alcoholic">Alcoholic</p>
-        <p class="drink-glass">Old-fashioned Glass</p>
+        <h3 class="drink-name"></h3>
+        <p class="drink-alcoholic"></p>
+        <p class="drink-glass"></p>
       </div>
 
 
@@ -143,7 +143,7 @@
 
         <div class="instructions">
 
-          <p>Shake and strain into a chilled glass.</p>
+          <p></p>
 
         </div>
 
