Last index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <input class="login-input" type="password" placeholder="Password..." id="user-pw" />
 
     <button type="button" class="btn btn-outline-warning login-btn">Login</button><br>
-    <div class="alert alert-danger" role="alert">No account with that User and/or Password.</div>
+    <div class="alert alert-danger" role="alert">Wrong user/password!</div>
   </div>
 
   <div class="landing-page">
