--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </nav>
 
   <!-- user login -->
-  <div class="login-div" id="login-id">
-    <h2>Welcome Back!</h2>
+  <div class="card login-div" id="login-id">
+    <h2>Login</h2>
     <input class="login-input" type="email" placeholder="Email..." id="user-email" />
     <input class="login-input" type="password" placeholder="Password..." id="user-pw" />
 
