--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <div class="navbar-brand" style="font-size: 50px">The Mixer</div>
-    <!-- user logout -->
-    <div class="logout-div ml-auto" id="logout-id">
-      <input class="btn btn-outline-warning logout-btn my-2" type="submit" value="Logout">
+      <div class="navbar-brand" style="font-size: 50px">
+        <a href="https://nickfp1985.github.io/the-mixer/">The Mixer</a></div>
+      <!-- user logout -->
+      <div class="logout-div ml-auto" id="logout-id">
+        <input class="btn btn-outline-warning logout-btn my-2" type="submit" value="Logout">
+      </div>
     </div>
-  </div>
   </nav>
 
   <!-- user login -->
@@ -155,6 +156,14 @@
     </div>
 
   </div>
+
+  <div class=footer>
+    <div class=github>
+      <img class=hub src="./assets/images/hub.png" alt="">
+      <a href="https://github.com/nickfp1985/the-mixer" target="https://github.com/nickfp1985/the-mixer">Github</a>
+    </div>
+  </div>
+
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
   <script>
     // Initialize Firebase
